fix: update snackbar width for better responsiveness and improve focus visibility styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,12 @@ body {
   -ms-overflow-style: thin;
 }
 
+button:focus-visible,
+input:focus-visible,
+textarea:focus-visible {
+  outline: none !important;
+}
+
 /* @media (min-width: 1024px) {
   *::-webkit-scrollbar {
     width: 0;
